--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "css-loader": "^2.1.1",
     "glslify-loader": "^2.0.0",
     "gsap": "^3.0.1",
