--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "browsersync": "0.0.1-security",
     "css-loader": "^2.1.1",
     "glslify-loader": "^2.0.0",
     "gsap": "^3.0.1",
